objects/vlocity_cmt__VlocityStateModel__c.object
<CustomObject>
    <description>A Vlocity State Model defines a model of allowed states and transitions between those states. A Vlocity State Model may govern the statuses of a contract or quote. The State Model record identifies the object and field governed by the state model.</description>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FieldAPIName__c</fullName>
        <label>Field API Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ObjectAPIName__c</fullName>
        <label>Object API Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TypeFieldName__c</fullName>
        <label>Type Field Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TypeFieldValue__c</fullName>
        <label>Type Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vlocity State Model</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Vlocity State Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity State Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>